<resources>
    <string name="app_name">简聊</string>

    <string name="no_account_goto_sign_up"><![CDATA[没有账号？ >>去注册]]></string>
    <string name="login">登 录</string>
    <string name="sign_up">注 册</string>

    <string name="self">自己</string>
    <string name="routine">日常</string>
    <string name="friends">朋友</string>
    <string name="friend_remark">备注：</string>
    <string name="friend_account">账号：</string>
    <string name="friend_address">地址：</string>
    <string name="friend_date">日期：</string>
    <string name="friend">friend</string>
    <string name="tip_empty_msg">不能发送空消息！</string>
    <string name="routine_active_zoom">活动空间</string>
    <string name="system_msg">系统消息</string>
    <string name="routine_translate">翻译</string>
    <string name="routine_credit_card_address">银行卡归属地</string>
    <string name="routine_certificates">证件识别</string>
    <string name="routine_scenic_spot">全国景点</string>
    <string name="routine_bus_route">公交线路</string>
    <string name="routine_food_menu">菜谱大全</string>
    <string name="routine_express">快递查询</string>
    <string name="routine_weather">天气</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_account">请输入手机号码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请再次输入密码</string>
    <string name="signup">注册</string>
    <string name="apply_account">申请账号</string>
    <string name="next_step">下一步</string>
    <string name="commit_data">提交信息</string>
    <string name="confirm">确 定</string>

    <string name="account">账号</string>
    <string name="verification_code">验证码</string>
    <string name="password">密码</string>
    <string name="confirm_password">重复密码</string>
    <string name="re_get">重获( s)</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="remember_me">记住我！</string>
    <string name="login_with_verification">验证登录</string>
    <string name="password_type">密码方式</string>
    <string name="login_now">马上登录</string>
    <string name="forget_password_and_find"><![CDATA[忘记密码？ >>去找回]]></string>
    <string name="verification_type">验证方式</string>
    <string name="male">男士</string>
    <string name="female">女士</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="routine_group_chat">群聊</string>
</resources>
