<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="2dp"
    app:contentPadding="12dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person_48dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            app:civ_border_width="3dp"
            app:civ_border_color="#4f000000"
            app:civ_fill_color="#7f666666"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/friend_remark"/>
                <TextView
                    android:id="@+id/remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/half_alpha_gray"
                    android:textSize="14sp"
                    android:text="张某某"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/friend_account"/>
                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/half_alpha_gray"
                    android:textSize="14sp"
                    android:text="446418184648448"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/friend_address"/>
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/half_alpha_gray"
                    android:textSize="14sp"
                    android:text="广东深圳"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/friend_date"/>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/half_alpha_gray"
                    android:textSize="14sp"
                    android:text="2017-8-10"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>



</android.support.v7.widget.CardView>